--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,10 @@
     "extends": "airbnb-base",
     "plugins": [
         "import"
-    ]
+    ],
+    "consistent-return": 0,
+    "rules": {
+      "no-param-reassign": 0,
+      "max-len": 0
+    }
 }
