--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "consistent-return": 0,
     "rules": {
       "no-param-reassign": 0,
-      "max-len": 0
+      "max-len": 0,
+      "no-plusplus": 0
     }
 }
