--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "rules": {
       "no-param-reassign": 0,
       "max-len": 0,
-      "no-plusplus": 0
+      "no-plusplus": 0,
+      "linebreak-style": 0
     }
 }
