--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "LambdaSchool's JavaScript Mini-Bootcamp Homework 1",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/eslint tests/*.js && ./node_modules/.bin/eslint src/*.js && jest",
+    "test": "eslint tests/*.js && eslint src/*.js && jest",
     "test:watch": "npm test -- --watch"
   },
   "repository": {
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.0",
-    "eslint-config-airbnb": "^14.1.0"
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
