--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,9 @@
       "no-param-reassign": 0,
       "max-len": 0,
       "no-plusplus": 0,
-      "linebreak-style": 0
+      "linebreak-style": 0,
+      "consistent-return": 0,
+      "no-useless-return": 0,
+      "no-return-assign": 0
     }
 }
