--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "js-homework-1",
   "version": "1.0.0",
@@ -15,6 +16,12 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SunJieMing/js-minicamp-homework-1/issues"
+  },
+  "jest": {
+      "moduleNameMapper": {
+      "^[./a-zA-Z0-9$_-]+\\.(jpg|png|gif|eot|svg|ttf|woff|woff2|mp4|webm)$": "<rootDir>/test/config/jest/FileStub.js",
+      "^[./a-zA-Z0-9$_-]+\\.css$": "<rootDir>/test/config/jest/CSSStub.js"
+    }
   },
   "homepage": "https://github.com/SunJieMing/js-minicamp-homework-1#readme",
   "devDependencies": {
