--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
       "arrow-body-style": 0,
       "max-len": 0,
       "no-unused-vars": 0,
-      "no-useless-constructor": 0
+      "no-useless-constructor": 0,
+      "import/no-unresolved": 0
     }
 }
