--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,15 @@
     "rules": {
       "no-param-reassign": 0,
       "max-len": 0,
-      "no-plusplus": 0
+      "no-plusplus": 0,
+      "linebreak-style": 0,
+      "consistent-return": 0,
+      "no-useless-return": 0,
+      "no-return-assign": 0,
+      "comma-dangle": 0,
+      "arrow-body-style": 0,
+      "max-len": 0,
+      "no-unused-vars": 0,
+      "no-useless-constructor": 0
     }
 }
