--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/SunJieMing/js-minicamp-homework-1#readme",
   "devDependencies": {
     "babel-jest": "^19.0.0",
-    "eslint": "^3.17.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "jest": "^19.0.2",
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.0",
-    "eslint-config-airbnb": "^14.1.0"
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
+    "underscore": "^1.8.3"
   }
 }
