--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.0",
-    "eslint-config-airbnb": "^14.1.0"
+    "eslint-config-airbnb": "^14.1.0",
+    "underscore": "^1.8.3"
   }
 }
