--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "regenerator-runtime": "^0.10.3"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "eslint-config-airbnb": "^14.1.0"
   }
