--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "regenerator-runtime": "^0.10.3"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-env": "^1.6.1",
     "eslint-config-airbnb": "^14.1.0"
   }
 }
